--- a/alpha.ipynb
+++ b/alpha.ipynb
@@ -753,7 +753,7 @@
    "outputs": [],
    "source": [
     "class MonteCarloAgent:\n",
-    "    def __init__(self, env, alpha = 0.1, gamma=0.99, epsilon=1.0, epsilon_decay=0.995, epsilon_min=0.01):\n",
+    "    def __init__(self, env, alpha = 0.5, gamma=0.60, epsilon=0.6, epsilon_decay=0.995, epsilon_min=0.01):\n",
     "        self.env = env\n",
     "        self.alpha = alpha\n",
     "        self.gamma = gamma\n",
@@ -785,7 +785,8 @@
     "        for state, action, reward in reversed(episode):\n",
     "            G = self.gamma * G + reward\n",
     "            # Verifique se a combinação estado-ação não aparece no episódio\n",
-    "            if not (state, action) in [(x[0], x[1]) for x in episode[:-1]]:\n",
+    "            #if not (state, action) in [(x[0], x[1]) for x in episode[:-1]]:\n",
+    "            if state is not None and action is not None:    \n",
     "                self.returns[state][action].append(G)\n",
     "                self.Q[state][action] = np.mean(self.returns[state][action])\n",
     "\n",
@@ -807,6 +808,8 @@
     "            while not done and step_count < max_steps:\n",
     "                action = self.choose_action(state)\n",
     "                next_state, reward, done, _ = self.env.step(action)\n",
+    "                # travei o reforço em -1\n",
+    "                reward = -1\n",
     "                episode.append((state, action, reward))\n",
     "                state = next_state\n",
     "                total_reward += reward\n",
@@ -1006,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1030,7 @@
     "# print(\"Episódio com mais passos:\", MC_best_episodes['max_steps'])\n",
     "\n",
     "\n",
-    "# MC_path = MC_best_episodes['max_steps']['path']\n",
+    "MC_path = MC_best_episodes['max_steps']['path']\n",
     "# env.play_path(MC_path)\n",
     "# env.close()\n",
     "\n",
@@ -1037,9 +1040,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/home/mario/maze_game/alpha.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         \u001b[39mif\u001b[39;00m event\u001b[39m.\u001b[39mkey \u001b[39m==\u001b[39m pygame\u001b[39m.\u001b[39mK_ESCAPE:  \u001b[39m# Tecla ESC\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m             running \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m env\u001b[39m.\u001b[39;49mdraw_maze()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m env\u001b[39m.\u001b[39mdraw_arrows(mc_q)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m pygame\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mupdate()\n",
+      "\u001b[1;32m/home/mario/maze_game/alpha.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=136'>137</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscreen_width \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_cols \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcell_size\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=137'>138</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscreen_height \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_rows \u001b[39m*\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcell_size\n\u001b[0;32m--> <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=138'>139</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscreen \u001b[39m=\u001b[39m pygame\u001b[39m.\u001b[39;49mdisplay\u001b[39m.\u001b[39;49mset_mode((\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscreen_width, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mscreen_height))\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=139'>140</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mscreen\u001b[39m.\u001b[39mfill(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mWHITE)\n\u001b[1;32m    <a href='vscode-notebook-cell:/home/mario/maze_game/alpha.ipynb#X24sZmlsZQ%3D%3D?line=141'>142</a>\u001b[0m \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_rows):\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "mc_q = MCAgent.showQ()\n",
     "MCAgent.execute_optimal_policy(max_steps = 100, start_pos = (0, 0))\n",
@@ -1315,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
