--- a/beta.ipynb
+++ b/beta.ipynb
@@ -9191,7 +9191,7 @@
         "\n",
         "O sistema desenvolvido para a atividade proposta, gera diversos gráficos localizados no diretório results, raiz do sistema onde possui 3 subdiretórios, já apresentados no tópico: entrada de dados.\n",
         "Estes diretórios são responsáveis por armazenar os gráficos de cada método na sua respectiva pasta. Para que sejam gerados o método escolhido deve ter a opção : save_plots=True.\n",
-        "\n"
+        "Estão anexados junto código fonte, vários Gifs que apresentam as imagens dos blocos em ação de acordo com os modelos propostos.\n"
       ]
     },
     {
@@ -9209,7 +9209,7 @@
         "\n",
         "Relembrando que os ambientes deterministicos são ambientes que possuem sempre o mesmo formato de labirinto proposto, já para o estocástico podem aparecer 2 barreiras no labirinto.\n",
         "\n",
-        "Para classificalçao dos resultados nas tabelas utilizamos os seguintes campos:\n",
+        "Para classificação dos resultados nas tabelas utilizamos os seguintes campos:\n",
         "\n",
         "Média de recompensa que envolve as colunas : Média de Passos e taxa de sucesso.\n",
         "Média de Passos é a quantidade média de passos necessárias para chegar ao destino.\n",
@@ -9223,35 +9223,36 @@
         "\n",
         "| Posicao |    Método    | Média das Recompensas | Desvio Padrão das Recompensas | Média de Passos | Desvio Padrão dos Passos | Taxa de Sucesso | Aprox Função |\n",
         "|---------|--------------|-----------------------|-------------------------------|-----------------|--------------------------|-----------------|--------------|\n",
-        "|    6    |Monte Carlo   |   9.970589            |      0.4828793291553549       |      6.592      |    6.923689296428132     |      0.998      |      Não     |\n",
-        "|    5    |Monte Carlo   |   9.959594            |      0.5976299496517228       |      6.69       |    6.896336669526762     |      0.997      |      Sim     |\n",
-        "|    2    |QLearning     |   9.994350999999998   |     0.006903293015253982      |      6.145      |    4.538344584930894     |      1.0        |      Não     |\n",
-        "|    1    |QLearning     |   9.994620999999999   |     0.010992916046400202      |      5.776      |    5.25141898932102      |      1.0        |      Sim     |\n",
-        "|    3    |SARSA         |   9.991277000000002   |     0.020408939114902443      |      8.211      |    6.801671981339716     |      1.0        |      Não     |\n",
+        "|    1    |QLearning     |   9.994620999999999   |      0.010992916046400202     |      5.776      |    5.25141898932102      |      1.0        |      Sim     |\n",
+        "|    2    |QLearning     |   9.994350999999998   |      0.006903293015253982     |      6.145      |    4.538344584930894     |      1.0        |      Não     |\n",
+        "|    3    |SARSA         |   9.991277000000002   |      0.020408939114902443     |      8.211      |    6.801671981339716     |      1.0        |      Não     |\n",
         "|    4    |SARSA         |   9.983801999999999   |      0.34262009474828725      |      5.86       |    5.994525363557514     |      0.999      |      Sim     |\n",
+        "|    5    |Monte Carlo   |   9.959594            |      0.5976299496517228       |      6.69       |    6.896336669526762     |      0.997      |      Sim     |\n",
+        "|    6    |Monte Carlo   |   9.970589            |      0.4828793291553549       |      6.592      |    6.923689296428132     |      0.998      |      Não     |\n",
         "\n",
         "\n",
         "Tabela de Resultados (estocástico):\n",
         "\n",
         "| Posicao |    Método    | Média das Recompensas | Desvio Padrão das Recompensas | Média de Passos | Desvio Padrão dos Passos | Taxa de Sucesso | Aprox Função |\n",
         "|---------|--------------|-----------------------|-------------------------------|-----------------|--------------------------|-----------------|--------------|\n",
+        "|   1     |QLearning     |   9.418042000000002   |       3.255620970281728       |     16.023      |    22.305919058066742    |      0.973      |      Não     |\n",
+        "|   2     |SARSA         |   9.107968000000001   |       2.915197155499338       |     21.138      |    29.014009870556823    |      0.924      |      Não     |\n",
+        "|   3     |QLearning     |   9.037999            |       4.250533102877527       |     15.616      |    22.91614482616336     |      0.955      |      Sim     |\n",
+        "|   4     |SARSA         |   8.800914            |       3.348988715421421       |     24.388      |    32.02606946106758     |      0.897      |      Sim     |\n",
         "|   5     |Monte Carlo   |   8.124021999999998   |       4.137913228597647       |     25.736      |    36.58673110422538     |      0.836      |      Não     |\n",
         "|   6     |Monte Carlo   |   5.156859999999999   |       5.395216651174734       |     51.077      |    45.72397350135651     |      0.557      |      Sim     |\n",
-        "|   1     |QLearning     |   9.418042000000002   |       3.255620970281728       |     16.023      |    22.305919058066742    |      0.973      |      Não     |\n",
-        "|   3     |QLearning     |   9.037999            |       4.250533102877527       |     15.616      |    22.91614482616336     |      0.955      |      Sim     |\n",
-        "|   2     |SARSA         |   9.107968000000001   |       2.915197155499338       |     21.138      |    29.014009870556823    |      0.924      |      Não     |\n",
-        "|   4     |SARSA         |   8.800914            |       3.348988715421421       |     24.388      |    32.02606946106758     |      0.897      |      Sim     |\n",
         "\n",
         "\n",
         "A tabela de resultados acima apresenta que o Qlearning ficou em primeiro deve ser o método selecionado para o tipo de pesquisa que esta sendo proposta nesse trabalho tanto para ambientes estocástico como para ambientes determinísticos. Um Fator interessante é que apesar do aumento de complexidade com o uso de aproximador de função , para o ambiente determinístico a solução implementada ficou ligeiramente melhor com o uso do aproximador de função. \n",
         "Já para o método estocástico os métodos com aproximadores de função não tiveram o mesmo desempenho. \n",
         "\n",
+        "Outro ponto que foi avaliado de forma superficial, mas foi levado em consideração nos modelos iniciais do sistema foi o tempo de execução. Apesar de superficial para este estudo ela apresenta um vantagem para o modelo Qlarning seguido do Monte Carlo.  \n",
         "\n",
         "## Deep Q-Networks\n",
         "\n",
         "Já os estudos executados com o Deep Q-Networks para o ambiente do labirinto, não foi muito promissor, de vários ensáios realizados o que melhor se apresentou foi o que teve os gráficos apresentados neste estudo.\n",
         "\n",
-        "O retorno não apresentou uma convergência no número de passos necessários para chegar ao destino, assim como,\n",
+        "O retorno não apresentou uma convergência no número de passos necessários para chegar ao destino, porém, apresentou uma convergência na recompensa, existe e uma redução na taxa de perda (Loss) o que é promissor para o estudo. Portanto, é possível que com mais estudos sobre este modelo sejam obtido dados mais promissores.\n",
         "\n",
         "## Resposta 1\n",
         "Se aplicassemos o na solução proposta possivelmente teriamos:\n",
@@ -9287,8 +9288,8 @@
         "\n",
         "Possíveis melhorias\n",
         "\n",
-        "Para continuação desta atividade seria interessante que no ambiente estocástico o sistema eliminasse possíveis bloqueios quando fosse gerar as paredes de forma aleatórios, isso iria eliminar a possibilidade de que em uma geração randomica o Bob ficasse preso e sem possíbilidade de chegar ao destino.\n",
-        "\n",
+        "Para continuação desta atividade seria interessante que para o ambiente estocástico, o sistema eliminasse possíveis bloqueios quando fosse gerar as paredes de forma aleatórios, isso iria eliminar a possibilidade de que em uma geração randomica o Bob ficasse preso e sem possíbilidade de chegar ao destino.\n",
+        "Aprimorar o estudo de tempo de cada atividade.\n",
         "\n",
         "\n",
         "\n",
